# fastapi_project

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  sqlite.db  start.sh  test.py
alembic/: env.py
alembic/versions/: 118fce85e839_rename_table.py  11efd91d2919_create_users_table.py  39c66ebfc739_add_todo_model.py  4d63e3f73356_final_table.py  4e8d287ec406_init.py  57420827eea7_final_table.py  72b8e0ca0d88_add_on_delete_casecade.py  84b941c4be83_init.py  8dbac23d1077_change_user_model.py  a234a85a368d_added_filed_in_user_table.py  f2fdc7609bf6_add_updated_at_to_users.py
src/: main.py
src/config/: constant.py  database.py  email_config.py  settings.py
src/dependencies/: __init__.py  auth.py  dependencies.py  user_dependancy.py
src/models/: todo_models.py  user_model.py
src/repository/: auth_repository.py  todo_repository.py  user_repository.py  users_repository.py
src/router/: auth_router.py  template_routes.py  todo_router.py  user_router.py
src/schemas/: auth_schema.py  pagination_schema.py  toso_shcema.py  user_schema.py
src/service/: auth_services.py  todo_services.py  user_services.py  users_services.py
src/utils/: alembic_upgrade.py  auth.py  cache.py  email.py  init_db.py  intit_redish.py  password_helper.py  rate_limiter.py  template_engine.py
static/css/: index.css
static/css/email/: welcome_email.css
templates/: index.html
templates/email/: welcome_email.html
