[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "isort>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
